# Portal

./: .gitignore  INSTALL.md  README.md  TODO.md  build-icons.sh  community.md  epub.html  error messages.md  error.html  eslint.config.js  fix-deps.sh  guide.html  harden.sh  index.html  navigator.html  optimize-icons.sh  package-lock.json  package.json  pdf.html  planned features.md  possible course map structure.md  settings.html  subset.sh  subviewer.html  tsconfig.json  viewer.html  vite.config.ts
.github/workflows/: publish-tauri-arm.yml  publish-tauri.yml  publish-to-auto-release.yml  publish-to-manual-release.yml  tauri-package-release.yml
docs/: index.html  styles.css
gh-pages/: README.md
src/: bindings.js  bindings.ts  graphing.ts  homepage.js  homepage.ts  index.html  main.js  shared.css  styles.css  util.ts  view-epub.ts  view-pdf.ts  viewer.ts
src-tauri/: Cargo.toml  TODO.md  files.md  tauri-hardened.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  course.rs  data.rs  lib.rs  main.rs
src-tauri/src/api/: data_dir_readme.md  mod.rs  state.rs  util.rs  wrapper.rs
src-tauri/src/course/: mod.rs  storage.rs  svg.rs  wrapper.rs
src-tauri/src/old_api/: mod.rs  state.rs
src-tauri/src/progress/: database.rs  mod.rs
src-tauri/src/state/: mod.rs  wrapper.rs
src/error/: main.ts  scripts.js  styles.css
src/graphing/: graphing.ts  main.ts  styles.css
src/guide/: styles.css
src/homepage/: main.ts  shared.ts  styles.css
src/modules/: bindings.js
src/navigator/: courses.ts  main.ts  maps.ts  navigator.ts  styles.css
src/settings/: main.ts  styles.css
src/viewer/: epub.ts  main.ts  pdf.ts  shared.css  shared.ts  styles-map.css  styles.css
