[package]
name = "school-of-life-portal"
version = "0.4.0"
description = "An app built for independent learners."
authors = [
	"School of Life Project",
]
edition = "2021"

[lib]
name = "app_lib"
crate-type = [
	"staticlib",
	"cdylib",
	"rlib",
]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [
] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = [
	"derive",
] }
tauri = { version = "2.0.1", features = [
	"protocol-asset",
	"devtools",
] }
tauri-plugin-shell = "2.0.1"
uuid = { version = "1.10", features = [
	"v4",
	"serde",
] }
toml = "0.8.19"
tokio = { version = "1.40", features = [
	"fs",
	"macros",
] }
thiserror = "1.0.64"
futures-util = "0.3.31"
chrono = { version = "0.4", default-features = false, features = [
	"std",
	"clock",
	"serde",
] }
zip = { version = "=2.1.3", default-features = false, features = [
	"bzip2",
	"deflate",
	"deflate64",
	"lzma",
	"zstd",
] } # https://github.com/zip-rs/zip2/issues/231
layout-rs = "0.1.2"
sled = "0.34.7"
bincode = "1.3.3"
schemars = { version = "0.8.21", features = [
	"uuid1",
] }

[profile.release]
codegen-units = 1
lto           = true
strip         = true
